client/public/style.css
.lightgreen{
    background-color: #e2f441;
}

.lightgrey{
    background-color: #f7f7f7;
}

.full-width{
    width: 100%;
}

.menu-link{
    color: black;
    font-size: 20px;
    display: block;
    padding: 15px;
}

.menu-link:hover{
    background-color: #f7f7f7;
    text-decoration: none;
    cursor: pointer;
    color: black;
}

.no-padding{
    padding: 0;
}

.logout-button{
    color: black;
    padding: 0 10px;
    cursor: pointer;
}

.selected-tab{
    background-color: #dbd9d9;
}

.selected-tab:hover{
    background-color: #dbd9d9;    
}

.right-shadow{
    box-shadow: 5px 0px 10px 0px lightgrey;
    z-index: 99;
}

@media only screen and (min-width: 992px){
    .full-height{
        height: 100vh;
    }
}

